# ffplay-cmake

./: CMakeLists.txt  README.md  ffplay.c  ffprobe.c
src/: ffmpeg.c
